log
Wed 15 May 2024 12:24:23 AM UTC: 
 tests:  0|5
total_score: 0/70
6ab6c0f
Wed 15 May 2024 12:40:49 AM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:57:23: error: iteration 9 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   57 |          if(n->sudo[i][j] == 0) {
      |             ~~~~~~~~~~^~~
sudoku.c:56:24: note: within this loop
   56 |       for(int j = 0; j < 10; j++) {
      |                      ~~^~~~
cc1: all warnings being treated as errors
Compilation failed
0b80df6
Wed 15 May 2024 12:42:40 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:57:23: error: iteration 9 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   57 |          if(n->sudo[i][j] == 0) {
      |             ~~~~~~~~~~^~~
sudoku.c:56:24: note: within this loop
   56 |       for(int j = 0; j <= 9; j++) {
      |                      ~~^~~~
cc1: all warnings being treated as errors
Compilation failed
18e7c94
Wed 15 May 2024 12:42:45 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f3cefb8
Wed 15 May 2024 12:43:13 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a112bf6
Wed 15 May 2024 12:43:27 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:57:23: error: iteration 9 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   57 |          if(n->sudo[i][j] == 0) {
      |             ~~~~~~~~~~^~~
sudoku.c:56:24: note: within this loop
   56 |       for(int j = 0; j < 10; j++) {
      |                      ~~^~~~
cc1: all warnings being treated as errors
Compilation failed
7233e6e
Wed 15 May 2024 12:43:37 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
31d7a99
Wed 15 May 2024 12:43:45 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b6d658d
Wed 15 May 2024 12:43:57 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
8809a38
Wed 15 May 2024 12:44:44 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d745204
Thu 16 May 2024 02:48:16 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
9ce2fb2
Thu 16 May 2024 05:15:34 PM UTC: 
 sudoku.c | 32 ++++++++++++++++++++++++++++++--
 1 file changed, 30 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
e382ea2
Thu 16 May 2024 05:16:28 PM UTC: 
 sudoku.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
9135484
Thu 16 May 2024 05:32:00 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
7389181
Thu 16 May 2024 05:35:51 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
08995c9
Thu 16 May 2024 07:43:42 PM UTC: 
 sudoku.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
08995c9
Thu 16 May 2024 07:45:30 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
c2a1036
Thu 16 May 2024 07:45:38 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
29edf7a
Thu 16 May 2024 07:49:14 PM UTC: 
 sudoku.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:71:83: error: statement with no effect [-Werror=unused-value]
   71 |             if((i != auxi || j != auxj) && n->sudo[i][j] == n->sudo[auxi][auxj]) {j);
      |                                                                                   ^
sudoku.c:71:84: error: expected ‘;’ before ‘)’ token
   71 |             if((i != auxi || j != auxj) && n->sudo[i][j] == n->sudo[auxi][auxj]) {j);
      |                                                                                    ^
      |                                                                                    ;
sudoku.c:71:84: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
ccbc923
Thu 16 May 2024 07:49:44 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
0fdf0d2
Thu 16 May 2024 07:50:24 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
69a3a1b
Thu 16 May 2024 07:50:44 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
5b98e7b
Thu 16 May 2024 07:56:39 PM UTC: 
 sudoku.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
46a023b
